# json_path_parser

./: .gitignore  pyproject.toml
src/json_path_parser/: __init__.py  __main__.py  evaluator.py  parsed_dataclasses.py  parser.py  transformer.py  useless.ipynb
test/: conftest.py  test_integration.py  test_parser.py  test_parser_comprehensive.py  test_transformer.py
test/data/: test_data.json
