[project]
name = "json-path-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "13cronil", email = "lukecronin1228@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "lark>=1.2.2",
    "lark-parser>=0.12.0",
]

[project.scripts]
parse = "json_path_parser.__main__:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.ruff]
select = ["ALL"]
ignore = [
    "D100"
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D101", "D102"]
